[package]
name = "actix-web-shorten-url"
version = "0.1.0"
authors = ["kam <hokamc00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.123"
serde_json = "1.0.62"
redis = "0.19.0"
